--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,30 @@
 html, body 
 {
     margin:0;
-    background-image: url(./assets/css/bg01.jpg)
+    background-image: url(./assets/css/bg01.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
+h1
+{
+    text-align: center;
+    padding-top: 150px;
+    font-family: 'Courier New';
+    font-size: 50px;
+}
+
+.form
+{
+    display: block;
+    text-align: center;
+}
+
+.addButton
+{
+    font-size: 17px;
+    margin: 0px auto;
+    padding: 15px 30px;
+    display: block;
+    text-align: center;
+}
