--- a/src/index.css
+++ b/src/index.css
@@ -14,17 +14,59 @@ h1
     font-size: 50px;
 }
 
-.form
+p   /*the text "you have no contacts.."*/
 {
-    display: block;
     text-align: center;
+    font-family: 'Courier New';
+    font-size: 15px;
+    padding-top: 15px;
+    padding-bottom: 150px;
 }
 
 .addButton
 {
     font-size: 17px;
     margin: 0px auto;
-    padding: 15px 30px;
+    padding: 8px 15px;
     display: block;
+    text-align: center;
+    border-radius: 5px;
+    color:;
+    background-color: #C7B2A5;
+    background: #EBEAEF;
+}
+
+.saveButton
+{
+    font-size: 15px;
+    font-family: 'Courier New';
+    margin: 15px auto;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: block;
+    text-align: center;
+    color: antiquewhite;
+    border-radius: 5px;
+    background-color: #7A4D35;
+    background: #A27D67;
+    
+}
+
+.form
+{
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border: 2px solid #A27D67;
+    padding: 2rem;
+    width: 100%;
+}
+
+label   /*labels of the form*/
+{
+    width: 85px;
+    display: inline-block;
     text-align: center;
 }
